// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`memo > asynchronous memoized components should works as expected 1`] = `
"<div id="root">
  <h1>
    Hello World
  </h1>
</div>
"
`;

exports[`memo > children of the memoized components should have access to the top level context 1`] = `
"<div id="root">
  <div>
    <div>
      <h1>
        Hello
      </h1>
    </div>
  </div>
</div>
"
`;

exports[`memo > memoized components should have access to the context of it's parent 1`] = `
"<div id="root">
  <h1>
    Hello
  </h1>
</div>
"
`;

exports[`memo > should "forget" memoized results that are past expire time 1`] = `
"<div id="root">
  <h1>
    Bye cruel world
  </h1>
</div>
"
`;

exports[`memo > should correctly memoize the component 1`] = `
"<div id="root">
  <h1>
    Hello World
  </h1>
</div>
"
`;
